--- a/Home-page/home.html
+++ b/Home-page/home.html
@@ -25,7 +25,7 @@
         <li><a href="menu.html">Menu</a></li>
         <li><a href="reservation.html">Table Reservation</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="login.html">Admin Login</a></li>
+        <li><a href="login.html">Admin Login</a></li> <!-- New Admin Login link -->
       </ul>
     </nav>
   </header>
