--- a/Home-page/home.html
+++ b/Home-page/home.html
@@ -27,5 +27,6 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="login.html">Admin Login</a></li> <!-- New Admin Login link -->
       </ul>
+      <!--update2-->
     </nav>
   </header>
