--- a/home.html
+++ b/home.html
@@ -1,65 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FreshBite Kitchen | Provide the Best Food for You</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>FreshBite Kitchen | Healthy & Delicious Food</title>
   <link rel="stylesheet" href="home.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="../Restaurant_Website/images/icon.ico" type="image/x-icon">
+  <link rel="icon" href="images/icon.ico" type="image/x-icon">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-   <header>
-  <div class="logo">
-    <a href="index.html">
-      <img src="../Restaurant_Website/images/logo_sample.jpeg" alt="Logo" />
-    </a>
-    <span>FreshBite Kitchen</span>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="menu.html">Menu</a></li>
-      <li><a href="diet-info.html">Diet Info</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="admin-login.html">Admin Login</a></li>
-    </ul>
-  </nav>
-</header>
 
+  <!-- Header -->
+  <header class="site-header">
+    <div class="logo">
+      <a href="home.html">
+        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen logo" />
+      </a>
+      <span>FreshBite Kitchen</span>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="home.html" class="active">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="diet-info.html">Diet Info</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="admin-login.html">Admin Login</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Provide the <span>best food</span> for you</h1>
-    <p>
-      We provide the best and most delicious food based on high-quality ingredients
-      that are maintained by high-tech machines and cooked by our experts.From gourmet pizzas to fresh salads, we serve happiness on a plate.
-    </p>
-    <div class="underline"></div>
-    
+  <main>
+    <!-- Hero / Video -->
+    <section class="hero-video" id="hero">
+      <video class="bg-video" autoplay muted loop playsinline>
+        <source src="videos/restaurant.mp4" type="video/mp4" />
+        <!-- fallback image -->
+      </video>
 
-    <!-- Food Cards -->
-    <div class="food-gallery">
-      <div class="food-card small">
-        <img src="../Restaurant_Website/images/food3.jpg" alt="Food">
+      <div class="hero-content">
+        <h1>Welcome to <span>FreshBite Kitchen</span></h1>
+        <p>Healthy, delicious, and crafted with care — every meal made fresh for you.</p>
       </div>
-      <div class="food-card">
-        <img src="../Restaurant_Website/images/food5.jpg" alt="Food">
-        <div class="badge">HOT DEALS</div>
-        <div class="price">
-          <span class="old">€12.8</span> <span class="new">€08.5</span>
-        </div>
-      </div>
-      <div class="food-card small">
-        <img src="../Restaurant_Website/images/food2.jpg" alt="Food">
-      </div>
-      <div class="food-card small">
-        <img src="../Restaurant_Website/images/food1.jpg" alt="Food">
+
+      <a href="#about" class="scroll-down" aria-label="Scroll to content">
+        <span class="arrow"></span>
+      </a>
+    </section>
+
+<!-- About Section -->
+<section class="about">
+  <div class="about-container">
+    <div class="about-text">
+      <h2>About <span>FreshBite Kitchen</span></h2>
+      <p>
+        At FreshBite Kitchen, we blend nutrition and taste to give you the best of both worlds.
+        Every dish is designed by expert chefs and nutritionists to keep you full of energy and joy.
+      </p>
+      <p>
+        We are passionate about healthy eating and take pride in sourcing 100% fresh and organic ingredients. 
+        Our menu caters to vegan, gluten-free, and health-conscious customers.
+      </p>
+      <p>
+        Currently, we serve our delicious meals in <strong>Helsinki, Turku, Espoo, and Tampere</strong>, 
+        with plans to expand further. Whether you want a fresh salad, hearty vegan bowl, or healthy juice, 
+        we bring nutritious meals straight to your doorstep.
+      </p>
+      <p>
+        Our mission is to make healthy eating easy, enjoyable, and accessible for everyone.
+        We believe good food fuels not just the body, but also the mind and soul.
+      </p>
+    </div>
+    <div class="about-image">
+      <img src="images/kitchen.jpg" alt="FreshBite Kitchen">
+    </div>
+  </div>
+</section>
+
+
+<!-- Specialities Section -->
+
+    <section class="specialties">
+  <h2>Our <span>Specialties</span></h2>
+  <div class="specialty-grid">
+    <div class="specialty-card">
+      <img src="images/burger.jpg" alt="Burgers">
+      <div class="specialty-info">
+        <h3>Burgers</h3>
+        <p>Juicy, freshly prepared burgers with a variety of toppings for every taste.</p>
       </div>
     </div>
+    <div class="specialty-card">
+      <img src="images/pizza.jpg" alt="Pizzas">
+      <div class="specialty-info">
+        <h3>Pizzas</h3>
+        <p>Wood-fired, cheesy pizzas made from the freshest ingredients.</p>
+      </div>
+    </div>
+    <div class="specialty-card">
+      <img src="images/drinks.jpg" alt="Drinks">
+      <div class="specialty-info">
+        <h3>Drinks</h3>
+        <p>Refreshing cold-pressed juices, smoothies, and classic beverages.</p>
+      </div>
+    </div>
+    <div class="specialty-card">
+      <img src="images/salads.jpg" alt="Salads">
+      <div class="specialty-info">
+        <h3>Salads</h3>
+        <p>Healthy and colorful salads packed with fresh vegetables and protein.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+    <!-- Why choose us -->
+
+<!-- Why choose us -->
+<section class="why-choose">
+  <h2>Why <span>Choose Us</span></h2>
+  <div class="choose-columns">
+
+    <!-- Left Column -->
+    <div class="choose-column">
+      <div class="choose-item">
+        <img src="images/fresh.jpg" alt="Fresh Ingredients">
+        <div class="choose-text">
+          <h3>100% Fresh Ingredients</h3>
+          <p>We use only fresh, organic ingredients for all our meals.</p>
+        </div>
+      </div>
+
+      <div class="choose-item">
+        <img src="images/chef.jpg" alt="Expert Chefs">
+        <div class="choose-text">
+          <h3>Expert Chefs</h3>
+          <p>Our chefs craft each dish to perfection with nutritional care.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Right Column -->
+    <div class="choose-column">
+      <div class="choose-item">
+        <img src="images/gluten.png" alt="Vegan & Gluten-Free">
+        <div class="choose-text">
+          <h3>Vegan & Gluten-Free</h3>
+          <p>Options for all diets without compromising taste.</p>
+        </div>
+      </div>
+
+      <div class="choose-item">
+        <img src="images/delivery.jpg" alt="Fast Delivery">
+        <div class="choose-text">
+          <h3>Fast Delivery</h3>
+          <p>Enjoy your meal quickly and safely, right at your doorstep.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+<!-- Reviews Section -->
+<section class="reviews">
+  <h2>What Our <span>Customers Say</span></h2>
+  <div class="review-grid">
+
+    <!-- Review 1 -->
+    <div class="review-card">
+      <img src="images/customer1.jpg" alt="Sofia" class="review-photo">
+      <p>“The best healthy restaurant in town! Every bite feels fresh and full of flavor.”</p>
+      <h4>– Sofia, Helsinki</h4>
+    </div>
+
+    <!-- Review 2 -->
+    <div class="review-card">
+      <img src="images/customer2.jpg" alt="Liam" class="review-photo">
+      <p>“Fast delivery, amazing taste, and the vegan options are incredible!”</p>
+      <h4>– Liam, Turku</h4>
+    </div>
+
+    <!-- Review 3 -->
+    <div class="review-card">
+      <img src="images/customer3.jpg" alt="Emma" class="review-photo">
+      <p>“Fresh ingredients, beautiful presentation, and friendly staff. Highly recommend!”</p>
+      <h4>– Emma, Espoo</h4>
+    </div>
+
+  </div>
+</section>
+
+
+
 
   <!-- Footer -->
   <footer>
@@ -70,6 +207,9 @@
       <a href="#">Privacy Policy</a>
     </nav>
   </footer>
+
 </body>
 </html>
+
+
 
