Add JavaScript validation for login and signup forms

--- a/customer_login.html
+++ b/customer_login.html
@@ -46,6 +46,6 @@
       <p class="small-text">Don't have an account? <a href="signup.html" id="switchToSignup">Sign Up</a></p>
     </form>
   </div>
-
+<script src="login.js"></script>
 </body>
 </html>
