corrected the page link for login

--- a/customer_login.html
+++ b/customer_login.html
@@ -43,7 +43,7 @@
         <input type="password" id="password" placeholder="Enter your password" required>
       </div>
       <button type="submit" class="btn">Login</button>
-      <p class="small-text">Don't have an account? <a href="signup.html" id="switchToSignup">Sign Up</a></p>
+      <p class="small-text">Don't have an account? <a href="customer_signup.html" id="switchToSignup">Sign Up</a></p>
     </form>
   </div>
 <script src="login.js"></script>
