--- a/customers_signup.html
+++ b/customers_signup.html
@@ -20,7 +20,7 @@
       <nav class="nav-right">
         <ul>
           <li><a href="home.html" class="nav-link">Home</a></li>
-          <li><a href="login.html" class="nav-link">Login</a></li>
+          <li><a href="customer_login.html" class="nav-link">Login</a></li>
         </ul>
       </nav>
     </div>
@@ -65,7 +65,7 @@
         </div>
 
         <button type="submit" class="signup-btn">Create Account</button>
-        <p class="switch-text">Already have an account? <a href="login.html">Login here</a></p>
+        <p class="switch-text">Already have an account? <a href="customer_login.html">Login here</a></p>
       </form>
     </div>
   </div>
