--- a/Reservation-page/reservation.html
+++ b/Reservation-page/reservation.html
@@ -6,7 +6,7 @@
   <title>FreshBite Kitchen | Table Reservation</title>
   <link rel="stylesheet" href="reservation.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/icon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/icon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
   <header class="site-header">
     <div class="logo">
       <a href="home.html">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen logo" />
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen logo" />
       </a>
       <span>FreshBite Kitchen</span>
     </div>
@@ -32,7 +32,7 @@
 
   <!-- Hero Section with Image -->
   <section class="hero-section">
-    <img class="hero-image" src="images/table.png" alt="Table Reservation" />
+    <img class="hero-image" src="../images/table.png" alt="Table Reservation" />
     <div class="hero-content">
       <h1>Reserve Your Table <span>Effortlessly</span></h1>
       <p>Enjoy a smooth and easy online table reservation.</p>
