customer dashboard has updated

--- a/Customer-dashboard/customer_dashboard.html
+++ b/Customer-dashboard/customer_dashboard.html
@@ -28,7 +28,7 @@
   <!-- Dashboard Main Content -->
   <div class="dashboard-container">
     <div class="welcome-section">
-      <h1>Welcome to Your Dashboard!! 👋</h1>
+      <h1>Welcome to Your Dashboard! 👋</h1>
       <p>What would you like to do today?</p>
     </div>
 
