--- a/Contact-page/contact.html
+++ b/Contact-page/contact.html
@@ -161,5 +161,6 @@
   <footer>
     <p>© 2025 FreshBite Kitchen | All Rights Reserved</p>
   </footer>
+  <script src="contact.js"></script>
 </body>
 </html>
