--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FreshBite Kitchen | Contact Us</title>
-  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="../css/contact.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/icon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/icon.ico" type="image/x-icon">
 </head>
 <body>
   <!-- Header -->
   <header class="site-header">
     <div class="logo">
       <a href="home.html">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen logo">
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen logo">
       </a>
       <span>FreshBite Kitchen</span>
     </div>
