--- a/frontend/html/customer_dashboard.html
+++ b/frontend/html/customer_dashboard.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Customer Dashboard | FreshBite Kitchen</title>
-  <link rel="stylesheet" href="customer_dashboard.css">
+  <link rel="stylesheet" href="../css/customer_dashboard.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/icon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/icon.ico" type="image/x-icon">
 </head>
 <body>
   <!-- Header -->
   <header class="dashboard-header">
     <div class="navbar">
       <a href="home.html" class="logo-link">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Kitchen</span>
       </a>
       <nav class="nav-right">
