--- a/frontend/html/customer_login.html
+++ b/frontend/html/customer_login.html
@@ -6,7 +6,7 @@
   <title>FreshBite Kitchen</title>
   <link rel="stylesheet" href="customer_login.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/icon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/icon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
   <header class="login-header">
     <div class="navbar">
       <a href="home.html" class="logo-link">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Kitchen</span>
       </a>
       <nav>
@@ -28,7 +28,7 @@
   <!-- Login Form -->
   <div class="login-wrapper">
     <div class="login-logo">
-      <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen Logo">
+      <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo">
       <h2>FreshBite Kitchen</h2>
         <p>Customer Login Portal</p>
     </div>
