--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>FreshBite Kitchen | Healthy & Delicious Food</title>
-  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="../css/home.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="images/icon.ico" type="image/x-icon">
 </head>
@@ -14,7 +14,7 @@
   <header class="site-header">
     <div class="logo">
       <a href="home.html">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen logo" />
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen logo" />
       </a>
       <span>FreshBite Kitchen</span>
     </div>
@@ -42,8 +42,7 @@
     <!-- Hero / Video -->
     <section class="hero-video" id="hero">
       <video class="bg-video" autoplay muted loop playsinline>
-        <source src="videos/restaurant.mp4" type="video/mp4" />
-        <!-- fallback image -->
+        <source src="../images/restaurant.mp4" type="video/mp4" />
       </video>
 
       <div class="hero-content">
@@ -80,7 +79,7 @@
       </p>
     </div>
     <div class="about-image">
-      <img src="images/kitchen.jpg" alt="FreshBite Kitchen">
+      <img src="../images/kitchen.jpg" alt="FreshBite Kitchen">
     </div>
   </div>
 </section>
@@ -92,28 +91,28 @@
   <h2>Our <span>Specialties</span></h2>
   <div class="specialty-grid">
     <div class="specialty-card">
-      <img src="images/burger.jpg" alt="Burgers">
+      <img src="../images/burger.jpg" alt="Burgers">
       <div class="specialty-info">
         <h3>Burgers</h3>
         <p>Juicy, freshly prepared burgers with a variety of toppings for every taste.</p>
       </div>
     </div>
     <div class="specialty-card">
-      <img src="images/pizza.jpg" alt="Pizzas">
+      <img src="../images/pizza.jpg" alt="Pizzas">
       <div class="specialty-info">
         <h3>Pizzas</h3>
         <p>Wood-fired, cheesy pizzas made from the freshest ingredients.</p>
       </div>
     </div>
     <div class="specialty-card">
-      <img src="images/drinks.jpg" alt="Drinks">
+      <img src="../images/drinks.jpg" alt="Drinks">
       <div class="specialty-info">
         <h3>Drinks</h3>
         <p>Refreshing cold-pressed juices, smoothies, and classic beverages.</p>
       </div>
     </div>
     <div class="specialty-card">
-      <img src="images/salads.jpg" alt="Salads">
+      <img src="../images/salads.jpg" alt="Salads">
       <div class="specialty-info">
         <h3>Salads</h3>
         <p>Healthy and colorful salads packed with fresh vegetables and protein.</p>
@@ -132,7 +131,7 @@
     <!-- Left Column -->
     <div class="choose-column">
       <div class="choose-item">
-        <img src="images/fresh.jpg" alt="Fresh Ingredients">
+        <img src="../images/fresh.jpg" alt="Fresh Ingredients">
         <div class="choose-text">
           <h3>100% Fresh Ingredients</h3>
           <p>We use only fresh, organic ingredients for all our meals.</p>
@@ -140,7 +139,7 @@
       </div>
 
       <div class="choose-item">
-        <img src="images/chef.jpg" alt="Expert Chefs">
+        <img src="../images/chef.jpg" alt="Expert Chefs">
         <div class="choose-text">
           <h3>Expert Chefs</h3>
           <p>Our chefs craft each dish to perfection with nutritional care.</p>
@@ -151,7 +150,7 @@
     <!-- Right Column -->
     <div class="choose-column">
       <div class="choose-item">
-        <img src="images/gluten.png" alt="Vegan & Gluten-Free">
+        <img src="../images/gluten.png" alt="Vegan & Gluten-Free">
         <div class="choose-text">
           <h3>Vegan & Gluten-Free</h3>
           <p>Options for all diets without compromising taste.</p>
@@ -159,7 +158,7 @@
       </div>
 
       <div class="choose-item">
-        <img src="images/delivery.jpg" alt="Fast Delivery">
+        <img src="../images/delivery.jpg" alt="Fast Delivery">
         <div class="choose-text">
           <h3>Fast Delivery</h3>
           <p>Enjoy your meal quickly and safely, right at your doorstep.</p>
@@ -177,21 +176,21 @@
 
     <!-- Review 1 -->
     <div class="review-card">
-      <img src="images/customer1.jpg" alt="Sofia" class="review-photo">
+      <img src="../images/customer1.jpg" alt="Sofia" class="review-photo">
       <p>“The best healthy restaurant in town! Every bite feels fresh and full of flavor.”</p>
       <h4>– Sofia, Helsinki</h4>
     </div>
 
     <!-- Review 2 -->
     <div class="review-card">
-      <img src="images/customer2.jpg" alt="Liam" class="review-photo">
+      <img src="../images/customer2.jpg" alt="Liam" class="review-photo">
       <p>“Fast delivery, amazing taste, and the vegan options are incredible!”</p>
       <h4>– Liam, Turku</h4>
     </div>
 
     <!-- Review 3 -->
     <div class="review-card">
-      <img src="images/customer3.jpg" alt="Emma" class="review-photo">
+      <img src="../images/customer3.jpg" alt="Emma" class="review-photo">
       <p>“Fresh ingredients, beautiful presentation, and friendly staff. Highly recommend!”</p>
       <h4>– Emma, Espoo</h4>
     </div>
