--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FreshBite Kitchen | Admin Access</title>
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="../css/login.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="images/icon.ico" type="image/x-icon">
 </head>
@@ -14,7 +14,7 @@
   <header class="login-header">
     <div class="navbar">
       <a href="home.html" class="logo-link">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Kitchen</span>
       </a>
       <nav>
@@ -28,7 +28,7 @@
   <!-- Login Form -->
   <div class="login-wrapper">
     <div class="login-logo">
-      <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen Logo">
+      <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo">
       <h2>FreshBite Kitchen</h2>
       <p>Admin Access Portal</p>
     </div>
