--- a/frontend/html/menu.html
+++ b/frontend/html/menu.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FreshBite Kitchen | Order Online</title>
-  <link rel="stylesheet" href="menu.css" />
+  <link rel="stylesheet" href="../css/menu.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/icon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/icon.ico" type="image/x-icon">
 </head>
 <body>
   <!-- Header -->
   <header>
     <div class="logo">
       <a href="home.html">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" />
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" />
       </a>
       <span>FreshBite Kitchen</span>
     </div>
@@ -42,7 +42,7 @@
 
   <div class="special-items">
     <div class="special-item">
-      <img src="images/mushroom-pasta.jpg" alt="Creamy Mushroom Pasta">
+      <img src="../images/mushroom-pasta.jpg" alt="Creamy Mushroom Pasta">
       <div class="special-info">
         <h3>Creamy Mushroom Pasta</h3>
         <p>Fresh pasta tossed in a rich mushroom and parmesan sauce.</p>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="special-item">
-      <img src="images/greek-salad.jpg" alt="Mediterranean Salad">
+      <img src="../images/greek-salad.jpg" alt="Mediterranean Salad">
       <div class="special-info">
         <h3>Mediterranean Salad</h3>
         <p>Crisp greens with olives, feta cheese, and lemon vinaigrette.</p>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="special-item">
-      <img src="images/mango-smoothie.jpg" alt="Mango Smoothie">
+      <img src="../images/mango-smoothie.jpg" alt="Mango Smoothie">
       <div class="special-info">
         <h3>Mango Smoothie</h3>
         <p>Refreshing tropical blend — sweet, cool, and full of energy.</p>
@@ -96,7 +96,7 @@
     <h2>Burgers</h2>
     <div class="items-grid">
       <div class="menu-item">
-        <div class="item-image"><img src="images/Classic_Beef_Burger.jpeg" alt="Classic Beef Burger"></div>
+        <div class="item-image"><img src="../images/Classic_Beef_Burger.jpeg" alt="Classic Beef Burger"></div>
         <div class="item-info">
           <h3>Classic Beef Burger</h3>
           <p>Juicy beef patty with lettuce, tomato, onion, and our special sauce.</p>
@@ -106,7 +106,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/double_cheese_burger.jpeg" alt="Double Cheese Burger"></div>
+        <div class="item-image"><img src="../images/double_cheese_burger.jpeg" alt="Double Cheese Burger"></div>
         <div class="item-info">
           <h3>Double Cheese Burger</h3>
           <p>Two beef patties with double cheese, pickles, and tangy sauce.</p>
@@ -116,7 +116,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/crispy_chicken_burger.webp" alt="Crispy Chicken Burger"></div>
+        <div class="item-image"><img src="../images/crispy_chicken_burger.webp" alt="Crispy Chicken Burger"></div>
         <div class="item-info">
           <h3>Crispy Chicken Burger</h3>
           <p>Breaded chicken fillet with coleslaw and mayo on a brioche bun.</p>
@@ -126,7 +126,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/veggie_burger.jpg" alt="Veggie Delight Burger"></div>
+        <div class="item-image"><img src="../images/veggie_burger.jpg" alt="Veggie Delight Burger"></div>
         <div class="item-info">
           <h3>Veggie Delight Burger</h3>
           <p>Plant-based patty with avocado, sprouts, and vegan mayo.</p>
@@ -136,7 +136,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/jalapeno-burger.jpg" alt="Spicy Jalapeno Burger"></div>
+        <div class="item-image"><img src="../images/jalapeno-burger.jpg" alt="Spicy Jalapeno Burger"></div>
         <div class="item-info">
           <h3>Spicy Jalapeño Burger</h3>
           <p>Loaded with fiery jalapeños, cheese, and spicy sauce.</p>
@@ -146,7 +146,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/bbq-burger.jpg" alt="BBQ Bacon Burger"></div>
+        <div class="item-image"><img src="../images/bbq-burger.jpg" alt="BBQ Bacon Burger"></div>
         <div class="item-info">
           <h3>BBQ Bacon Burger</h3>
           <p>Smoky BBQ sauce, crispy bacon, cheddar cheese, and grilled onions.</p>
@@ -162,7 +162,7 @@
     <h2>Pizzas</h2>
     <div class="items-grid">
       <div class="menu-item">
-        <div class="item-image"><img src="images/margherita_pizza.jpg" alt="Margherita Pizza"></div>
+        <div class="item-image"><img src="../images/margherita_pizza.jpg" alt="Margherita Pizza"></div>
         <div class="item-info">
           <h3>Margherita</h3>
           <p>Classic tomato sauce, mozzarella, and fresh basil.</p>
@@ -172,7 +172,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/pepproni_pizza.jpeg" alt="Pepperoni Pizza"></div>
+        <div class="item-image"><img src="../images/pepproni_pizza.jpeg" alt="Pepperoni Pizza"></div>
         <div class="item-info">
           <h3>Pepperoni</h3>
           <p>Tomato sauce, mozzarella, and spicy pepperoni slices.</p>
@@ -182,7 +182,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/hawaiian_pizza.jpg" alt="Hawaiian Pizza"></div>
+        <div class="item-image"><img src="../images/hawaiian_pizza.jpg" alt="Hawaiian Pizza"></div>
         <div class="item-info">
           <h3>Hawaiian</h3>
           <p>Ham, pineapple, mozzarella, and tomato sauce.</p>
@@ -192,7 +192,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/veggie_pizza.jpg" alt="Vegetarian Pizza"></div>
+        <div class="item-image"><img src="../images/veggie_pizza.jpg" alt="Vegetarian Pizza"></div>
         <div class="item-info">
           <h3>Vegetarian Supreme</h3>
           <p>Bell peppers, mushrooms, olives, onions, and tomatoes.</p>
@@ -202,7 +202,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/bbq_pizza.jpg" alt="BBQ Chicken Pizza"></div>
+        <div class="item-image"><img src="../images/bbq_pizza.jpg" alt="BBQ Chicken Pizza"></div>
         <div class="item-info">
           <h3>BBQ Chicken</h3>
           <p>Grilled chicken, BBQ sauce, red onions, and mozzarella.</p>
@@ -212,7 +212,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/four-cheese.jpg" alt="Four Cheese Pizza"></div>
+        <div class="item-image"><img src="../images/four-cheese.jpg" alt="Four Cheese Pizza"></div>
         <div class="item-info">
           <h3>Four Cheese</h3>
           <p>Mozzarella, cheddar, parmesan, and gorgonzola blend.</p>
@@ -228,7 +228,7 @@
     <h2>Salads</h2>
     <div class="items-grid">
       <div class="menu-item">
-        <div class="item-image"><img src="images/ceasae_salad.jpg" alt="Caesar Salad"></div>
+        <div class="item-image"><img src="../images/ceasae_salad.jpg" alt="Caesar Salad"></div>
         <div class="item-info">
           <h3>Classic Caesar</h3>
           <p>Romaine lettuce, croutons, parmesan, and creamy Caesar dressing.</p>
@@ -238,7 +238,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/greek_salad.jpg" alt="Greek Salad"></div>
+        <div class="item-image"><img src="../images/greek_salad.jpg" alt="Greek Salad"></div>
         <div class="item-info">
           <h3>Greek Salad</h3>
           <p>Cucumbers, tomatoes, olives, feta cheese, and olive oil dressing.</p>
@@ -248,7 +248,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/quinoa_salad.webp" alt="Quinoa Salad"></div>
+        <div class="item-image"><img src="../images/quinoa_salad.webp" alt="Quinoa Salad"></div>
         <div class="item-info">
           <h3>Quinoa Power Bowl</h3>
           <p>Quinoa, roasted vegetables, avocado, and lemon-tahini dressing.</p>
@@ -258,7 +258,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/tuna_salad.jpg" alt="Tuna Salad"></div>
+        <div class="item-image"><img src="../images/tuna_salad.jpg" alt="Tuna Salad"></div>
         <div class="item-info">
           <h3>Tuna Salad</h3>
           <p>Mixed greens with tuna, corn, boiled egg, and light dressing.</p>
@@ -274,7 +274,7 @@
     <h2>Finnish Specialties</h2>
     <div class="items-grid">
       <div class="menu-item">
-        <div class="item-image"><img src="images/salmon_soup.jpg" alt="Finnish Salmon Soup"></div>
+        <div class="item-image"><img src="../images/salmon_soup.jpg" alt="Finnish Salmon Soup"></div>
         <div class="item-info">
           <h3>Finnish Salmon Soup</h3>
           <p>Traditional Lohikeitto with salmon, potatoes, and dill.</p>
@@ -284,7 +284,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/meatballs.webp" alt="Finnish Meatballs"></div>
+        <div class="item-image"><img src="../images/meatballs.webp" alt="Finnish Meatballs"></div>
         <div class="item-info">
           <h3>Finnish Meatballs</h3>
           <p>Lihapullat with mashed potatoes, lingonberry jam, and gravy.</p>
@@ -294,7 +294,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/karelian_pasties.jpg" alt="Karelian Pasties"></div>
+        <div class="item-image"><img src="../images/karelian_pasties.jpg" alt="Karelian Pasties"></div>
         <div class="item-info">
           <h3>Karelian Pasties</h3>
           <p>Traditional rice-filled pastries with egg butter.</p>
@@ -304,7 +304,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/reindeer_stew.jpg" alt="Reindeer Stew"></div>
+        <div class="item-image"><img src="../images/reindeer_stew.jpg" alt="Reindeer Stew"></div>
         <div class="item-info">
           <h3>Reindeer Stew</h3>
           <p>Slow-cooked reindeer with root vegetables and herbs.</p>
@@ -320,7 +320,7 @@
     <h2>Healthy Options</h2>
     <div class="items-grid">
       <div class="menu-item">
-        <div class="item-image"><img src="images/budha_bowl.jpg" alt="Buddha Bowl"></div>
+        <div class="item-image"><img src="../images/budha_bowl.jpg" alt="Buddha Bowl"></div>
         <div class="item-info">
           <h3>Rainbow Buddha Bowl</h3>
           <p>Quinoa, roasted sweet potatoes, kale, avocado, and tahini dressing.</p>
@@ -330,7 +330,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/grilled_salmon.jpg" alt="Grilled Salmon"></div>
+        <div class="item-image"><img src="../images/grilled_salmon.jpg" alt="Grilled Salmon"></div>
         <div class="item-info">
           <h3>Grilled Salmon</h3>
           <p>Atlantic salmon with steamed vegetables and lemon herb sauce.</p>
@@ -340,7 +340,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/veggie_wrap.png" alt="Veggie Wrap"></div>
+        <div class="item-image"><img src="../images/veggie_wrap.png" alt="Veggie Wrap"></div>
         <div class="item-info">
           <h3>Mediterranean Veggie Wrap</h3>
           <p>Hummus, roasted vegetables, feta, and spinach in a whole wheat wrap.</p>
@@ -350,7 +350,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/berry-bowl.jpg" alt="Smoothie Bowl"></div>
+        <div class="item-image"><img src="../images/berry-bowl.jpg" alt="Smoothie Bowl"></div>
         <div class="item-info">
           <h3>Berry Smoothie Bowl</h3>
           <p>Mixed berries, granola, coconut flakes, and chia seeds.</p>
@@ -366,7 +366,7 @@
     <h2>Drinks</h2>
     <div class="items-grid">
       <div class="menu-item">
-        <div class="item-image"><img src="images/coffee.jpg" alt="Coffee"></div>
+        <div class="item-image"><img src="../images/coffee.jpg" alt="Coffee"></div>
         <div class="item-info">
           <h3>Finnish Coffee</h3>
           <p>Traditional Finnish brew served black or with milk.</p>
@@ -376,7 +376,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/orange_juice.jpg" alt="Orange Juice"></div>
+        <div class="item-image"><img src="../images/orange_juice.jpg" alt="Orange Juice"></div>
         <div class="item-info">
           <h3>Fresh Orange Juice</h3>
           <p>Freshly squeezed orange juice.</p>
@@ -386,7 +386,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/berry_smoothie.jpg" alt="Berry Smoothie"></div>
+        <div class="item-image"><img src="../images/berry_smoothie.jpg" alt="Berry Smoothie"></div>
         <div class="item-info">
           <h3>Berry Blast Smoothie</h3>
           <p>Mixed berries, banana, yogurt, and honey.</p>
@@ -396,7 +396,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/mango-lassi.jpg" alt="Mango Lassi"></div>
+        <div class="item-image"><img src="../images/mango-lassi.jpg" alt="Mango Lassi"></div>
         <div class="item-info">
           <h3>Mango Lassi</h3>
           <p>Refreshing yogurt-based mango drink.</p>
@@ -406,7 +406,7 @@
       </div>
 
       <div class="menu-item">
-        <div class="item-image"><img src="images/ice-tea.jpg" alt="Iced Tea"></div>
+        <div class="item-image"><img src="../images/ice-tea.jpg" alt="Iced Tea"></div>
         <div class="item-info">
           <h3>Lemon Iced Tea</h3>
           <p>Chilled tea with lemon and mint.</p>
