--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Signup | FreshBite Kitchen</title>
-  <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="../css/signup.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/icon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/icon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
   <header class="signup-header">
     <div class="navbar">
       <a href="admin-dashboard.html" class="logo-link">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Admin</span>
       </a>
       <nav class="nav-right">
@@ -29,7 +29,7 @@
   <!-- Admin Signup Container -->
   <div class="signup-container">
     <div class="signup-box">
-      <img src="images/logo_sample.jpeg" alt="FreshBite Logo" class="signup-logo">
+      <img src="../images/logo_sample.jpeg" alt="FreshBite Logo" class="signup-logo">
       <h1>Admin <span>Signup</span></h1>
       <p>Register a new admin account to manage FreshBite operations.</p>
 
