updte the HTML pages with JS

--- a/frontend/html/admin-dashboard.html
+++ b/frontend/html/admin-dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard | FreshBite Kitchen</title>
-  <link rel="stylesheet" href="admin-dashboard.css">
+  <link rel="stylesheet" href="../css/admin-dashboard.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="images/icon.ico" type="image/x-icon">
 </head>
@@ -13,7 +13,7 @@
   <header class="admin-header">
     <div class="navbar">
       <a href="home.html" class="logo-link">
-        <img src="images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
+        <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Admin</span>
       </a>
       <nav class="nav-right">
@@ -126,6 +126,6 @@
       </div>
     </div>
   </div>
-  <script src="admin-dashboard.js"></script>
+  <script src="../js/admin-dashboard.js"></script>
 </body>
 </html>
