--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -161,6 +161,6 @@
   <footer>
     <p>© 2025 FreshBite Kitchen | All Rights Reserved</p>
   </footer>
-  <script src="contact.js"></script>
+  <script src="../js/contact.js"></script>
 </body>
 </html>
