--- a/frontend/html/customer_login.html
+++ b/frontend/html/customer_login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FreshBite Kitchen</title>
-  <link rel="stylesheet" href="customer_login.css">
+  <link rel="stylesheet" href="../css/customer_login.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="../images/icon.ico" type="image/x-icon">
 </head>
@@ -43,9 +43,9 @@
         <input type="password" id="password" placeholder="Enter your password" required>
       </div>
       <button type="submit" class="btn">Login</button>
-      <p class="small-text">Don't have an account? <a href="customer_signup.html" id="switchToSignup">Sign Up</a></p>
+      <p class="small-text">Don't have an account? <a href="customers_signup.html" id="switchToSignup">Sign Up</a></p>
     </form>
   </div>
-<script src="login.js"></script>
+<script src="../js/login.js"></script>
 </body>
 </html>
