--- a/frontend/html/menu.html
+++ b/frontend/html/menu.html
@@ -441,6 +441,6 @@
   <footer>
     <p>© 2025 FreshBite Kitchen | All Rights Reserved</p>
   </footer>
-  <script src="menu.js"></script>
+  <script src="../js/menu.js"></script>
 </body>
 </html>
