--- a/frontend/html/customer_dashboard.html
+++ b/frontend/html/customer_dashboard.html
@@ -74,6 +74,6 @@
       }
     }
   </script>
-  <script src="customer_dashboard.js"></script>
+  <script src="../js/customer_dashboard.js"></script>
 </body>
 </html>
