--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -59,7 +59,7 @@
       </form>
     </div>
   </div>
-<script src="signup.js"></script>
+<script src="../js/signup.js"></script>
  
 </body>
 </html>
