Update the HTML files with links of JS and CSS

--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -170,5 +170,6 @@
     <p>© 2025 FreshBite Kitchen | All Rights Reserved</p>
   </footer>
   <script src="../js/contact.js"></script>
+  <script src="../js/home.js"></script>
 </body>
 </html>
