--- a/frontend/html/menu.html
+++ b/frontend/html/menu.html
@@ -450,5 +450,6 @@
     <p>© 2025 FreshBite Kitchen | All Rights Reserved</p>
   </footer>
   <script src="../js/menu.js"></script>
+  <script src="../js/home.js"></script>
 </body>
 </html>
