--- a/frontend/html/reservation.html
+++ b/frontend/html/reservation.html
@@ -107,6 +107,6 @@
       <a href="#">Privacy Policy</a>
     </nav>
   </footer>
-
+  <script src="../js/reservation.js"></script>
 </body>
 </html>
