added find-us page

--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -20,10 +20,11 @@
 
     <nav>
       <ul>
-        <li><a href="home.html" class="active">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="reservation.html">Table Reservation</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="find-us.html">Find Us</a></li>
 
         <!-- Dropdown Menu -->
         <li class="dropdown">
