--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -25,6 +25,9 @@
         <li><a href="menu.html">Menu</a></li>
         <li><a href="reservation.html">Table Reservation</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="find-us.html">Find Us</a></li>
+
+
 
         <!-- Dropdown Menu -->
         <li class="dropdown">
@@ -54,6 +57,8 @@
         <span class="arrow"></span>
       </a>
     </section>
+
+    
 
 <!-- About Section -->
 <section class="about" id="about">
