--- a/frontend/html/reservation.html
+++ b/frontend/html/reservation.html
@@ -21,10 +21,11 @@
 
     <nav>
       <ul>
-        <li><a href="home.html" class="active">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
-        <li><a href="reservation.html">Table Reservation</a></li>
+        <li><a href="reservation.html"  class="active">Table Reservation</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="find-us.html">Find Us</a></li>
 
         <!-- Dropdown Menu -->
         <li class="dropdown">
@@ -111,10 +112,14 @@
     <p>© 2025 FreshBite Kitchen | All Rights Reserved</p>
     <nav>
       <a href="#">About Us</a> |
-      <a href="#">Location</a> |
+      <a href="https://reittiopas.hsl.fi/reitti/-/60.1699,24.9384" target="_blank">
+  Location (Open in HSL)
+</a> |
+
       <a href="#">Privacy Policy</a>
     </nav>
   </footer>
   <script src="../js/reservation.js"></script>
+  <script src="../js/home.js"></script>
 </body>
 </html>
