Add bilingual support (EN/FI) for home page byusing translations.js and data-i18n

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -142,8 +142,8 @@
       <div class="choose-item">
         <img src="../images/fresh.jpg" alt="Fresh Ingredients">
         <div class="choose-text">
-          <h3 data-i18n="fresh_ingredients>100% Fresh Ingredients</h3>
-          <p data-i18n="fresh_ingredients_text">We use only fresh, organic ingredients for all our meals.</p>
+          <h3 data-i18n="fresh_ingredients">100% Fresh Ingredients</h3>
+          <p data-i18n="fresh_ingredients_text"> We use only fresh, organic ingredients for all our meals.</p>
         </div>
       </div>
 
@@ -227,7 +227,8 @@
 
 </body>
 </html>
-<!-- End of file -->
+
+ <!-- End of file -->
 
 
 
