--- a/frontend/html/reservation.html
+++ b/frontend/html/reservation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>FreshBite Kitchen | Table Reservation</title>
+  <title data-i18n="page_title_reservation">FreshBite Kitchen | Table Reservation</title>
   <link rel="stylesheet" href="../css/reservation.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="../images/icon.ico" type="image/x-icon">
@@ -16,24 +16,29 @@
       <a href="home.html">
         <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen logo" />
       </a>
-      <span>FreshBite Kitchen</span>
+      <span data-i18n="logo_text">FreshBite Kitchen</span>
     </div>
 
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="reservation.html"  class="active">Table Reservation</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="find-us.html">Find Us</a></li>
+        <li><a href="home.html" data-i18n="nav_home">Home</a></li>
+        <li><a href="menu.html" data-i18n="nav_menu">Menu</a></li>
+        <li><a href="reservation.html" class="active" data-i18n="nav_reservation">Table Reservation</a></li>
+        <li><a href="contact.html" data-i18n="nav_contact">Contact</a></li>
+        <li><a href="find-us.html" data-i18n="nav_findus">Find Us</a></li>
 
         <!-- Dropdown Menu -->
         <li class="dropdown">
-          <a href="#" class="dropbtn">Login ▾</a>
+          <a href="#" class="dropbtn" data-i18n="login">Login ▾</a>
           <ul class="dropdown-content">
-            <li><a href="customer_login.html">Users</a></li>
-            <li><a href="login.html">Admin</a></li>
+            <li><a href="customer_login.html" data-i18n="login_user">Users</a></li>
+            <li><a href="login.html" data-i18n="login_admin">Admin</a></li>
           </ul>
+        </li>
+
+        <!-- LANGUAGE SWITCH BUTTON (same idea as home) -->
+        <li class="lang-switcher">
+          <button id="lang-switch">FI / EN</button>
         </li>
       </ul>
     </nav>
@@ -43,8 +48,9 @@
   <section class="hero-section">
     <img class="hero-image" src="../images/table.png" alt="Table Reservation" />
     <div class="hero-content">
-      <h1>Reserve Your Table <span>Effortlessly</span></h1>
-      <p>Enjoy a smooth and easy online table reservation.</p>
+      <!-- include span inside translation key -->
+      <h1 data-i18n="reservation_hero_title">Reserve Your Table <span>Effortlessly</span></h1>
+      <p data-i18n="reservation_hero_text">Enjoy a smooth and easy online table reservation.</p>
     </div>
   </section>
 
@@ -54,29 +60,29 @@
 
       <!-- Left Side: Instructions -->
       <div class="reservation-text">
-        <h2>Reservation Guidelines</h2>
+        <h2 data-i18n="reservation_guidelines_title">Reservation Guidelines</h2>
         <ul>
-          <li>Only one person from a group can reserve a table online.</li>
-          <li>Groups larger than 9 people cannot reserve a table online.</li>
-          <li>Choose your preferred date and time for the reservation.</li>
-          <li>If you do not arrive within 1 hour of the reserved time, your reservation will be canceled.</li>
+          <li data-i18n="reservation_guideline_1">Only one person from a group can reserve a table online.</li>
+          <li data-i18n="reservation_guideline_2">Groups larger than 9 people cannot reserve a table online.</li>
+          <li data-i18n="reservation_guideline_3">Choose your preferred date and time for the reservation.</li>
+          <li data-i18n="reservation_guideline_4">If you do not arrive within 1 hour of the reserved time, your reservation will be canceled.</li>
         </ul>
       </div>
 
       <!-- Right Side: Reservation Form -->
       <div class="reservation-form">
-        <h2>Reserve a Table</h2>
+        <h2 data-i18n="reservation_form_title">Reserve a Table</h2>
         <form>
-          <label for="name">Full Name</label>
+          <label for="name" data-i18n="reservation_label_name">Full Name</label>
           <input type="text" id="name" name="name" placeholder="Your Name" required>
 
-          <label for="email">Email</label>
+          <label for="email" data-i18n="reservation_label_email">Email</label>
           <input type="email" id="email" name="email" placeholder="Your Email" required>
 
-          <label for="phone">Phone Number</label>
+          <label for="phone" data-i18n="reservation_label_phone">Phone Number</label>
           <input type="tel" id="phone" name="phone" placeholder="Your Phone Number" required>
 
-          <label for="guests">Number of Guests</label>
+          <label for="guests" data-i18n="reservation_label_guests">Number of Guests</label>
           <select id="guests" name="guests" required>
             <option value="">Select</option>
             <option value="1">1</option>
@@ -89,18 +95,21 @@
             <option value="8">8</option>
             <option value="9">9</option>
           </select>
-          <span class="guest-warning">Groups over 9 cannot reserve online.</span>
 
-          <label for="date">Date</label>
+          <span class="guest-warning" data-i18n="reservation_guest_warning">
+            Groups over 9 cannot reserve online.
+          </span>
+
+          <label for="date" data-i18n="reservation_label_date">Date</label>
           <input type="date" id="date" name="date" required>
 
-          <label for="time">Time</label>
+          <label for="time" data-i18n="reservation_label_time">Time</label>
           <input type="time" id="time" name="time" required>
 
-          <label for="requests">Special Requests</label>
+          <label for="requests" data-i18n="reservation_label_requests">Special Requests</label>
           <textarea id="requests" name="requests" placeholder="Any special requests"></textarea>
 
-          <button type="submit">Reserve Table</button>
+          <button type="submit" data-i18n="reservation_submit_btn">Reserve Table</button>
         </form>
       </div>
 
@@ -109,17 +118,21 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 FreshBite Kitchen | All Rights Reserved</p>
+    <p data-i18n="footer_text">© 2025 FreshBite Kitchen | All Rights Reserved</p>
     <nav>
-      <a href="#">About Us</a> |
-      <a href="https://reittiopas.hsl.fi/reitti/-/60.1699,24.9384" target="_blank">
-  Location (Open in HSL)
-</a> |
-
-      <a href="#">Privacy Policy</a>
+      <a href="#" data-i18n="footer_about">About Us</a> |
+      <a href="https://reittiopas.hsl.fi/reitti/-/60.1699,24.9384" target="_blank"
+         data-i18n="reservation_footer_location">
+        Location (Open in HSL)
+      </a> |
+      <a href="#" data-i18n="reservation_footer_privacy">Privacy Policy</a>
     </nav>
   </footer>
+
+  <!-- JS -->
   <script src="../js/reservation.js"></script>
   <script src="../js/home.js"></script>
+  <script src="../js/translations.js"></script>
+  <script src="../js/language.js"></script>
 </body>
 </html>
